Review path for assets

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenAI Translator Chat</title>
-    <link rel="stylesheet" href="/public/assets/css/styles.css">
-    <link rel="icon" href="/public/assets/img/translate.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="icon" href="./assets/img/translate.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <h1>OpenAI Translator Chat</h1>
-        <img src="/public/assets/img/translate.png" alt="OpenAI Translator" />
+        <img src="./assets/img/translate.png" alt="OpenAI Translator" />
     </header>
     <div id="app">
         <!-- Section for translations -->
