--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
             </div>
         </section>
     </div>
-    <script src="main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
