Add reset button

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
                     <option value="de">German</option>
                     <!-- Add more languages as needed -->
                 </select>
-                <button id="translate-button">Translate</button>
+
+                <div style="display: flex; gap: 10px;">
+                    <button id="translate-button">Translate</button>
+                    <button id="reset-button">Reset</button>
+                </div>
             </div>
         </section>
     </div>
